<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/add_favourite"
        android:icon="@drawable/ic_round_favorite_border_24px"
        android:title="@string/favourites"
        android:iconifiedByDefault="false"
        app:showAsAction="ifRoom" />
</menu>