<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/btn_matches"
        android:enabled="true"
        android:icon="@drawable/ic_football_whistle_of_referee"
        android:title="@string/matches"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/btn_teams"
        android:enabled="true"
        android:icon="@drawable/ic_flaming_football"
        android:title="@string/teams"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/btn_favourites"
        android:enabled="true"
        android:icon="@drawable/ic_round_favorite_24px"
        android:title="@string/favourites"
        app:showAsAction="ifRoom" />
</menu>